fixed stretching of images

--- a/src/components/client/Members.css
+++ b/src/components/client/Members.css
@@ -1,7 +1,7 @@
 .picked {
   border-left: 1px solid grey;
 }
-.picked h1{
+.picked h1 {
   font-family: "Roboto", serif;
   font-weight: bold;
   padding-bottom: 2rem;
@@ -18,7 +18,7 @@
 
 .pickedTeam h4 {
   margin-left: 5%;
-  display:inline;
+  display: inline;
   background-color: red;
 }
 
@@ -36,13 +36,14 @@
   border-radius: 3%;
 }
 
-.withoutSidebar:hover, .withSidebar:hover {
+.withoutSidebar:hover,
+.withSidebar:hover {
   transform: translateY(-5px);
-  box-shadow: 0 20px 20px rgb(0,0,0, .2);
+  box-shadow: 0 20px 20px rgb(0, 0, 0, 0.2);
   transition: 0.5s;
 }
 
-.membersContainer{
+.membersContainer {
   margin-top: 5rem;
 }
 
@@ -58,9 +59,13 @@
   width: 130px;
   height: 130px;
   border-radius: 50%;
-  display:block;
+  display: block;
   margin: 10% auto;
   border: 3px solid white;
+  object-position: 0% 0%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  /* object-fit: scale-down; */
 }
 
 .memberCardBody {
@@ -68,45 +73,44 @@
 }
 
 .price {
-  color: #79B5E4;
+  color: #79b5e4;
 }
 
 .deleteBtn {
-  background: #CF4746;
+  background: #cf4746;
   border: 1px solid #fff;
   border-radius: 50%;
   color: white;
   font-size: 0.9rem;
   font-weight: bold;
-  float: right
+  float: right;
 }
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
   position: relative;
 }
-.empty{
+.empty {
   height: 5rem;
 }
-.price-pick{
-  bottom: 1rem ;
+.price-pick {
+  bottom: 1rem;
   width: 100%;
   left: 0;
   position: absolute;
-
 }
 @media only screen and (max-width: 768px) {
-
   .memberImage {
     width: 120px;
     height: 120px;
   }
-  .withoutSidebar, .withSidebar {
+  .withoutSidebar,
+  .withSidebar {
     width: 80%;
     margin: 10%;
   }
 }
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
   .picked {
     border-left: 1px solid grey;
     position: fixed;
@@ -118,16 +122,9 @@
 }
 
 .button-color {
-  background: #0B7AAC !important;
+  background: #0b7aac !important;
 }
 
 .price-color {
-  color: #ECB355;
+  color: #ecb355;
 }
-
-@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: portrait)  {
-  .membersContainer{
-    padding-bottom: 13rem;
-  }
-}
-
